fix: navbar width on Safari

--- a/styles/index.css
+++ b/styles/index.css
@@ -197,7 +197,15 @@ body {
 }
 
 .topbar {
+  /* width: calc(100% - (360px + 156px)); */
   height: var(--topbar-height);
+}
+
+/* workaround for Safari */
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  .topbar {
+    width: calc(100% - (360px + 156px));
+  }
 }
 
 .main-container {
